# sentence-mixing

./: .gitignore  .isort.cfg  README.md  align.py  audio_segment.py  config.py  create_video.py  main.py  parameter_optimizer.py  phonem.py  phonem_finding.py  phonem_group.py  pyproject.toml  requirements-dev.txt  requirements.txt  sentence_to_phonems.py  serialize.py  setup.py  subtitle.py  target_parser.py  tester.py  utils.py  video_creator_main.py
logic/: analyze.py  analyze_step_1.py  analyze_step_2.py  analyze_step_3.py  audio_analysis.py  display.py  global_audio_data.py  parameters.py  randomizer.py  target_parser.py  text_parser.py  utils.py  video_processing.py
model/: abstract.py  association.py  audio.py  audio_phonem.py  audio_segment.py  audio_word.py  choice.py  exceptions.py  phonem.py  scorable.py  sentence.py  subtitle_line.py  target.py  target_phonem.py  target_sentence.py  target_word.py  video.py  word.py
parameter_tuning/: get_compatible_dict.py  parameter_tweaking.py  speech_recognition  speech_to_text_dict.py
sentence_mixing/: __init__.py  config.py  parameter_optimizer.py  sentence_mixer.py  serialize.py
sentence_mixing/logic/: analyze.py  analyze_step_1.py  analyze_step_2.py  analyze_step_3.py  audio_analysis.py  display.py  global_audio_data.py  parameters.py  randomizer.py  text_parser.py  utils.py  video_processing.py
sentence_mixing/model/: abstract.py  association.py  audio.py  choice.py  exceptions.py  scorable.py  target.py  video.py
sentence_mixing/parameter_tuning/: parameter_tweaking.py  (+2 more)
video_creator/: audio.py  download.py  interface.py  video.py
(+2 files in other folders)
