[project]
name = "sentence-mixing"
version = "1.4.0"
description = "Sentence mixing library"
[[authors]]
name = "Nicolas Busser"
[[authors]]
name = "Louis Mouhat"

license = "LICENSE"
readme = "README.md"
python = "^3.10"
homepage = "https://github.com/pop123123123/sentence-mixing"
repository = "https://github.com/pop123123123/sentence-mixing"
documentation = "https://github.com/pop123123123/sentence-mixing"

keywords = ["nlp", "audio processing", "automatism", "sentence-mixing", "youtube", "poop"]

classifiers = ["Topic :: Entertainment"]

[tool.black]
line-length = 79
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.subs
  | \.downloads
  | \.env
)/
'''
